# MoonBoardRNN

./: .gitignore  README.md  pyproject.toml  requirements.txt
model/: DeepRouteSetHelper.py  DeepRouteSet_eval.ipynb  DeepRouteSet_helper.py  DeepRouteSet_isolated.py  DeepRouteSet_train.ipynb  DeepRouteSet_v4.ipynb  GradeNet.ipynb  GradeNet_eval.ipynb  GradeNet_train.ipynb  GradeNet_train_history  generated_route_eval.ipynb  generator.py  generator_batch.py  model_helper.py
model/DeepRouteSet/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model/DeepRouteSet/variables/: variables.data-00000-of-00001  variables.index
model/GradeNet/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model/GradeNet/variables/: variables.data-00000-of-00001  variables.index
preprocessing/: Step1_data_preprocessing_v2.ipynb  Step2_BetaMove.ipynb  Step3_partition_train_test_set_v2.ipynb  constants.py  preprocessing_helper.py
preprocessing/new_data/: dev_seq_curated  test_seq_curated  training_seq_curated
raw_data/: .gitignore  MoonBoard_2016_raw_schema.json  hold_features_2016.csv  hold_features_2016_LH.csv  warwick_wall.csv
